<resources>
    <string name="app_name">Roomies</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="room_name">Room name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_room">Create new room</string>
    <string name="register">Register</string>
    <string name="login_message">Use your room account to log in.\nTo create or join a new room, press the add button.</string>
    <string name="loading_message">Please wait ...</string>
    <string name="register_message">Create a new room or join an existing one.</string>
    <string name="error_missing_data">Please check your input!</string>
    <string name="error_login">Login failed. Please, try again.</string>
    <string name="error_registration">Registration failed. Please, try again.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tasks_empty_message">There are no active tasks.\nBe the hero this group needs, and create a new one.</string>
    <string name="tasks_error_message">Something went wrong!\nUse swipe-to-refresh to try again.</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="award_points">Award points</string>
    <string name="done">Done</string>
    <string name="unknown_error">Oops! Something went wrong.</string>
    <string name="assign_description">Select a user to which this task will be assigned</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="assign_no_one">no one</string>
    <string name="number_of_points">Number of points</string>
    <string name="percent_of_all_completed_tasks">% of all completed tasks</string>

</resources>
