<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.matejhacin.roomies.activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/login_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_default"
        android:gravity="center"
        android:text="@string/login_message" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="false"
        android:layout_marginBottom="@dimen/space_default">

        <EditText
            android:id="@+id/login_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="false"
        app:passwordToggleEnabled="false"
        android:layout_marginBottom="@dimen/space_default">

        <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_input_layout_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="false"
        android:layout_marginBottom="@dimen/space_default">

        <EditText
            android:id="@+id/login_room_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/login_new_room_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/space_default"
        android:text="@string/create_new_room"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/login"
        android:textColor="@android:color/white" />

</LinearLayout>